add hl-line-mode to bookmarks

--- a/emacs.org
+++ b/emacs.org
@@ -131,6 +131,7 @@ Use-package is macro that is used like a package manager. [[https://github.com/j
 
   ;; Buffer Menu
   (add-hook 'Buffer-menu-mode-hook 'hl-line-mode)
+  (add-hook 'bookmark-bmenu-mode-hook 'hl-line-mode)
 #+end_src
 
 *** Backup files
