--- a/emacs.org
+++ b/emacs.org
@@ -1994,5 +1994,12 @@ Dash board for initial startup of emacs. [[https://github.com/emacs-dashboard/em
     (add-hook 'dashboard-mode-hook 'hl-line-mode)
 
 #+end_src
+* Recreation
+** Hacker News Reader
+#+begin_src emacs-lisp
+  (unless jmn-pure
+  (use-package hnreader))
+
+#+end_src
 * Localwords                                                       :noexport:
 #  LocalWords:  IDE solarized gruvbox vertico Magit Quickhelp Elpy Elisp Neotree Greduan's Localwords Esc  Smartparens UI Helpful's Yasnippet LSP Modeline Dap Flycheck modeline Treemacs backend lsp vterm eshell  Dired dracula clangd ui Grammarly workspaces commenter Pyright CMake Flyspell Pyvenv treemacs shellcheck Linum Proced Hacky GTD
