add ruff to python linting and TOML mode to emacs

--- a/emacs.org
+++ b/emacs.org
@@ -815,6 +815,11 @@ Archive: melpa
     :defer t)
 #+end_src
 
+** TOML
+#+begin_src emacs-lisp
+  (use-package toml-mode
+    :defer t)
+#+end_src
 ** Docker
 Archive: melpa
 #+begin_src emacs-lisp
