remove git gutter for org mode

--- a/emacs.org
+++ b/emacs.org
@@ -615,8 +615,8 @@ Git-gutter-fringe displays git-gutter in the fringe
 #+begin_src emacs-lisp
   (use-package git-gutter
     :hook ((prog-mode . git-gutter-mode)
-           (org-mode . git-gutter-mode)
-           (text-mode . git-gutter-mode))
+           ;; (text-mode . git-gutter-mode) ;; effects org-ellipsis
+           )
     :config (setq git-gutter:update-interval 0.02))
 
   (use-package git-gutter-fringe
