PYTHONPATH from environment

--- a/emacs.org
+++ b/emacs.org
@@ -552,6 +552,7 @@ Clear up to allow the tab-bar keybindings.
      (save-buffer)
      (kill-current-buffer))
 #+end_src
+
 * General Development
 ** Indentation
 Guess the indentation offset and 'indent-tabs-mode' from the file using internal heuristics.
@@ -964,10 +965,15 @@ After changing venv all installed packages from venv should be visible for LSP s
 For lsp, have pyright installed =pip install pyright=
 **** python-mode
 #+begin_src emacs-lisp
-  ;;;; Python-mode ;;;;
   (with-eval-after-load 'python
+    ;; if emacs is not run from a terminal, we need to add the PYTHONPATH set in .bashrc
+    (unless (getenv "PYTHONPATH")
+      (setenv "PYTHONPATH" (shell-command-to-string "$SHELL --login -c 'echo -n $PYTHONPATH'")))
+    ;; allow completion
     (setq python-shell-completion-native-enable 1)
+    ;; keybindings
     (define-key python-mode-map (kbd "C-RET") 'python-shell-send-statement)
+    ;; use ipython for interpreter if it exists
     (if (executable-find "ipython")
         (progn (setq python-shell-interpreter "ipython")
                (setq python-shell-interpreter-args "-i --simple-prompt"))))
@@ -1115,7 +1121,8 @@ Notes on completion: use =C-c C-l= to insert a path link and get completion.
   (with-eval-after-load 'org
     (jmn/org-font-setup)
     (unless (or jmn-term jmn-pure)
-      (setq org-ellipsis " ▾"))
+      (progn (setq org-ellipsis " ▾")
+             (set-face-underline 'org-ellipsis nil)))
     (setq org-hide-emphasis-markers t
           org-src-fontify-natively t
           org-fontify-quote-and-verse-blocks t
