set frame height

--- a/emacs.org
+++ b/emacs.org
@@ -25,7 +25,7 @@ Hopefully only need to change these to get setup on a new machine.
   (defconst jmn-pureplus-systems '("lat")
     "Systems which use the pure setup with the plus packages")
 
-  (defconst jmn-dark-mode t
+  (defconst jmn-dark-mode nil
     "Do we want Emacs in a dark mode? Note: no dark-mode for windows as of now")
 
   (defconst jmn-font-height-alist '(("xps" . 110)
@@ -1765,7 +1765,7 @@ Helpful functions
 ** Frame Height
 #+begin_src emacs-lisp
   (if (window-system)
-      (set-frame-height (selected-frame) 52))
+      (set-frame-height (selected-frame) 53))
 #+end_src
 ** Default and time switches
 #+begin_src emacs-lisp
