add better sizeDirs and trash aliases

--- a/emacs.org
+++ b/emacs.org
@@ -847,6 +847,7 @@ Note: not used or tangled
 #+end_src
 
 ** Devdocs
+To install documentation, use =M-x evdocs-install=
 #+begin_src emacs-lisp
     (use-package devdocs
      :defer 2
