clean up how packages are updated

--- a/emacs.org
+++ b/emacs.org
@@ -52,7 +52,8 @@ This snippet adds a hook to =org-mode= buffers so that =efs/org-babel-tangle-con
 
 ** Packages and Management
 Archives: elpa is default, melpa is community.
-Use-package is macro that is used like a package manager. [[https://github.com/jwiegley/use-package][Use-Package Documentation]]
+- Use-package is macro that is used like a package manager. [[https://github.com/jwiegley/use-package][Use-Package Documentation]]
+- Update all packages with =M-x package-upgrade-all=
 #+begin_src emacs-lisp
   (if (member system-name jmn-connected-systems)
       (defconst jmn-pure nil "Indicating if we are pure or using packages")
@@ -91,8 +92,6 @@ Use-package is macro that is used like a package manager. [[https://github.com/j
   ;; allows us to make sure environment packages are installed
   (use-package use-package-ensure-system-package
     :ensure t)
-
-  ;; update your packages with=M-x auto-package-update-now= to update right now.
 #+end_src
 
 * General Emacs
