add dired defaults

--- a/emacs.org
+++ b/emacs.org
@@ -322,6 +322,8 @@ More to do at [[https://youtu.be/PMWwM8QJAtU][here]]: dired-open
                                          ("\\.iso\\'" "vlc")
                                          ("\\.webm\\'" "vlc")
                                          ("\\.mkv\\'" "vlc")
+                                         ("\\.odt\\'" "libreoffice")
+                                         ("\\.docx\\'" "libreoffice")
                                          ("\\.mp3\\'" "rhythmbox")
                                          ("\\.html\\'" "firefox")
                                          ("\\.epub\\'" "ebook-viewer")
