--- a/emacs.org
+++ b/emacs.org
@@ -2026,28 +2026,38 @@ Dash board for initial startup of emacs. [[https://github.com/emacs-dashboard/em
 
 #+begin_src emacs-lisp
   (if jmn-connected-extras
-    (use-package dashboard
-      :ensure t
-      :init     (dashboard-setup-startup-hook)
-      :bind ( "C-c d" . dashboard-open)
-      :config
-      (setq dashboard-banner-logo-title "Habits, not goals.")
+      (use-package dashboard
+        :ensure t
+        :init (dashboard-setup-startup-hook)
+        :bind ("C-c d" . dashboard-open)
+        :config
+        (setq dashboard-banner-logo-title "Habits, not goals.")
 
-      (setq dashboard-startup-banner 2)  ;; (nil . no-banner)  ([1-5] . plain-text banners)
-      (setq dashboard-center-content 1)
-      (setq dashboard-show-shortcuts 1)  ;; show the single-character shortcuts
-      (setq dashboard-items '((recents  . 5)
-                              (bookmarks . 5)
-                              (projects . 5)
-                              (agenda . 5)
-                              (registers . 5)))
+        (setq dashboard-startup-banner 2)  ;; (nil . no-banner)  ([1-5] . plain-text banners)
+        (setq dashboard-center-content 1)
+        (setq dashboard-show-shortcuts 1)  ;; show the single-character shortcuts
+        (setq dashboard-items '((recents  . 5)
+                                (bookmarks . 5)
+                                (projects . 5)
+                                (agenda . 5)
+                                (registers . 5)))
 
-      (setcdr (assoc 'projects dashboard-item-shortcuts) "j")
-      (setq dashboard-set-heading-icons t)
-      (setq dashboard-set-file-icons t)
-      (setq dashboard-projects-backend 'project-el)
-      (dashboard-modify-heading-icons '((recents . "file-text")))
-      (setq dashboard-set-footer nil)))
+        (setcdr (assoc 'projects dashboard-item-shortcuts) "j")
+        (setq dashboard-set-heading-icons t)
+        (setq dashboard-set-file-icons t)
+        (setq dashboard-projects-backend 'project-el)
+        (dashboard-modify-heading-icons '((recents . "file-text")))
+        (setq dashboard-set-footer nil)
+        (setq dashboard-startupify-list
+              '(dashboard-insert-banner
+                dashboard-insert-newline
+                dashboard-insert-banner-title
+                dashboard-insert-newline
+                dashboard-insert-init-info
+                dashboard-insert-items
+                dashboard-insert-newline
+                ;;dashboard-insert-footer
+                )))
 
     (defun my-dashboard-hook()
       "Needed to define these after hook for some reason"
@@ -2055,8 +2065,7 @@ Dash board for initial startup of emacs. [[https://github.com/emacs-dashboard/em
       (define-key dashboard-mode-map (kbd "p")  'dashboard-previous-line))
 
     (add-hook 'dashboard-mode-hook 'my-dashboard-hook)
-    (add-hook 'dashboard-mode-hook 'hl-line-mode)
-
+    (add-hook 'dashboard-mode-hook 'hl-line-mode))
 #+end_src
 * Recreation
 ** Hacker News Reader
