only run setopt if version is 29 and above

--- a/emacs.org
+++ b/emacs.org
@@ -558,7 +558,7 @@ Clear up to allow the tab-bar keybindings.
 
 ** Emacs in the terminal
 #+begin_src emacs-lisp
-    (if jmn-term
+    (if (and jmn-term (version<= "29" emacs-version))
         (progn
           (xterm-mouse-mode 1)
           (setopt mode-line-end-spaces nil)  ;; Only matters for jmn-pure, doom-modeline is uneffected
